[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/pearman.png" type="Texture" id=1]
[ext_resource path="res://pearman.gd" type="Script" id=2]

[node name="pirnivana" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 15, 15, 15, 1, 1, 1, 1, 15 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 64, 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -56, 0 )
polygon = PoolVector2Array( -12, -12, -12, 12, 12, 12, 12, -12 )

[node name="groundboxx" type="Area2D" parent="."]
position = Vector2( 8, 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="groundboxx"]
polygon = PoolVector2Array( -7, -8, 7, -8, 7, 7, -7, 7 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="groundboxx" to="." method="_on_groundboxx_body_entered"]
[connection signal="body_exited" from="groundboxx" to="." method="_on_groundboxx_body_exited"]
